fix: move createdBy translation to watchlists namespace
- Add 'createdBy' translation to watchlists.json in both languages
- Change component to use t('detail.createdBy') instead of tCommon('createdBy')
- Use watchlists namespace which is already loaded and working
- Ensure translation loads correctly without namespace issues
- Fix 'Creado por' in Spanish and 'Created by' in English

--- a/public/locales/es/watchlists.json
+++ b/public/locales/es/watchlists.json
@@ -18,6 +18,7 @@
   "detail": {
     "addMovie": "Agregar Película",
     "empty": "No hay películas en esta lista",
+    "createdBy": "Creado por",
     "addFirst": "Agrega tu primera película",
     "emptyTitle": "Tu lista está vacía",
     "emptyDescription": "Comienza a construir tu colección agregando películas y series que quieras ver.",
