feat: improve hero copy and README to emphasize collaborative watchlists and community
- Update app.tagline and app.description in both EN/ES locales
- Emphasize collaborative lists, community discovery, and movie nights
- Revise README with bilingual positioning and features
- Add tech stack section
- Maintain existing setup instructions

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,8 +1,8 @@
 {
   "app": {
     "name": "CineCollab",
-    "tagline": "Find your next favorite show",
-    "description": "Search for movies and TV shows, create watchlists, and collaborate with friends"
+    "tagline": "Build collaborative watchlists with friends",
+    "description": "Discover films and series together. Create shared lists, swap recommendations, and plan movie nights with your community"
   },
   "navigation": {
     "search": "Search",
